--- a/res/layout/choose_area.xml
+++ b/res/layout/choose_area.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="#fff"
-            android:textSize="24sp"/>"
+            android:textSize="24sp"/>
     </RelativeLayout>
     <ListView 
         android:id="@+id/list_view"
